--- a/Basic_HTML_and_CSS/css/basic_style.css
+++ b/Basic_HTML_and_CSS/css/basic_style.css
@@ -101,7 +101,8 @@ h1 {
         transform: translateY(0px);
         background-image: url("../Images/Icons/icons2.png");
     }
+
     50% {
-        transform: translateY(300px)
+        transform: translateY(300px);
     }
 }
