My first HTML and CSS website

--- a/Basic_HTML_and_CSS/Top_Food_AE/css/shared.css
+++ b/Basic_HTML_and_CSS/Top_Food_AE/css/shared.css
@@ -148,7 +148,7 @@ section {
 ------------------------------------------------------*/
 
 #home {
-    background: url(../Images/Others/planets.jpeg) no-repeat 50% 50%;
+    background: url(../Images/Others/Food_Table.jpg) no-repeat 50% 50%;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -318,7 +318,7 @@ section {
     text-align: center;
     font-family: sans-serif;
     margin: 0px 3%;
-    padding: 7% 0%;
+    padding: 7px 0px;
     width: 25%;
     font-size: 18px;
     transition: border-color 0.3s color 0.3s background-color 0.3s;
@@ -376,50 +376,4 @@ section {
     .container {
         width: 1170px;
     }
-}
-
-/*------------------------------------------------------
-    MENU SELECTION ANIMATION   
-------------------------------------------------------*/
-
-.menu {
-    color: #f00;
-    font: bold 12px/18px sans-serif;
-    text-align: center;
-    display: inline;
-    margin: 0% auto;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-}
-
-.menu li {
-    color: #000;
-    background-color: rgba(255, 255, 255, 1);
-    display: inline-block;
-    margin: 0% auto;
-    position: relative;
-    padding: 15px 4%;
-    border: 1px solid #9D9fa2;
-    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 6px;
-    /*background-color: #052136*/
-    cursor: pointer;
-    transition-property: background;
-    transition-duration: .4s;
-    transition-delay: 0s;
-    transition-timing-function: ease-in-out;
-}
-
-.menu li:hover {
-    color: #f00;
-    background-color: rgba(100, 65, 0, .3);
-}
-
-/*------------------------------------------------------
-    GALLERY SECTION ANIMATION  
-------------------------------------------------------*/
-
-.photo {
-    position: relative;
 }
